All current variables being filled

--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -2,8 +2,10 @@ LDFLAGS = `root-config --glibs`
 CFLAGS = `root-config --cflags`
 exename = makehbbtree
 flatclass = hbbfile
+testfile = F6F880D2-ACBE-E611-B59D-0CC47A706D40.root
+cmssw = ${CMSSW_BASE}
 
-ifndef ${CMSSW_BASE}
+ifeq ($(cmssw), '')
 	pandainc = ../..
 	pandalib = ../../PandaTree/lib
 	pandalibs = -lpanda
@@ -13,6 +15,7 @@ else
 	pandalib = ${CMSSW_BASE}/lib/${SCRAM_ARCH}
 	target =  ${CMSSW_BASE}/bin/${SCRAM_ARCH}/$(exename)
 	pandalibs = -lPandaTreeFramework -lPandaTreeObjects -lPandaTreeUtils
+	testfile = /mnt/hadoop/scratch/jenkins/panda/dabercro/PandaProd/jenkins-clean/F6F880D2-ACBE-E611-B59D-0CC47A706D40.root
 endif
 
 $(target): $(flatclass).h slimmer.cpp
@@ -25,7 +28,7 @@ $(flatclass).h: hbbfile.txt ${CROMBIEPATH}/scripts/maketree.py
 
 test: $(target)
 	test ! -f test.root || rm test.root
-	DYLD_LIBRARY_PATH=$(pandalib) ./$(target) F6F880D2-ACBE-E611-B59D-0CC47A706D40.root test.root
+	DYLD_LIBRARY_PATH=$(pandalib) PATH=.:${PATH} $(target) $(testfile) test.root
 
 clean:
 	rm $(target) $(flatclass).h
