Using 'crombie feedpanda' to set branch statuses.

--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -17,8 +17,11 @@ else
 	testfile = /mnt/hadoop/scratch/jenkins/panda/dabercro/PandaProd/jenkins-clean/F6F880D2-ACBE-E611-B59D-0CC47A706D40.root
 endif
 
-$(target): $(flatclass).h slimmer.cpp ${CROMBIEPATH}/SkimmingTools/interface/StoreParticles.h
+$(target): $(flatclass).h slimmer.cpp ${CROMBIEPATH}/SkimmingTools/interface/StoreParticles.h feedpanda.h
 	g++ -I$(pandainc) -I${CROMBIEPATH} $(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -o $(target) slimmer.cpp
+
+feedpanda.h: $(flatclass).h slimmer.cpp
+	crombie feedpanda $(pandainc)/PandaTree/defs/panda.def $(flatclass).h slimmer.cpp feedpanda.h
 
 $(flatclass).h: hbbfile.txt ${CROMBIEPATH}/scripts/maketree.py
 	crombie maketree $(flatclass).txt
@@ -30,4 +33,4 @@ test: $(target)
 	DYLD_LIBRARY_PATH=$(pandalib) PATH=.:${PATH} $(target) $(testfile) test.root
 
 clean:
-	rm $(target) $(flatclass).h
+	rm $(target) $(flatclass).h feedpanda.h
