Preparing for test run.

--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -15,7 +15,22 @@ else
 	target =  ${CMSSW_BASE}/bin/${SCRAM_ARCH}/$(exename)
 	pandalibs = -lPandaTreeFramework -lPandaTreeObjects -lPandaTreeUtils
 	testfile = /mnt/hadoop/scratch/jenkins/panda/dabercro/PandaProd/jenkins-clean/F6F880D2-ACBE-E611-B59D-0CC47A706D40.root
+
+	checker = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/findtree.py
+	thejq = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/jq
+	tarball = ${CMSSW_BASE}/condor.tgz
+
+$(tarball): $(target) $(checker) $(thejq)
+	tar -czf $(tarball) --directory ${CMSSW_BASE} bin lib external
+
+$(checker): ${CROMBIEPATH}/scripts/findtree.py
+	cp ${CROMBIEPATH}/scripts/findtree.py $(checker)
+
+$(thejq): /home/dabercro/bin/jq
+	cp /home/dabercro/bin/jq $(thejq)
+
 endif
+
 
 $(target): $(flatclass).h slimmer.cpp ${CROMBIEPATH}/SkimmingTools/interface/StoreParticles.h feedpanda.h
 	g++ -I$(pandainc) -I${CROMBIEPATH} $(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -o $(target) slimmer.cpp
