--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -42,9 +42,11 @@ $(flatclass).h: $(flatclass).txt ${CROMBIEPATH}/scripts/maketree.py
 
 .PHONY: clean test
 
-test: $(target)
+test: $(tarball)
 	test ! -f test.root || rm test.root
 	DYLD_LIBRARY_PATH=$(pandalib) PATH=.:${PATH} $(exename) $(testfile) test.root
+	test -z ${CMSSW_BASE} || test ! -d ${HOME}/public_html/plots/test || rm -r ${HOME}/public_html/plots/test
+	test -z ${CMSSW_BASE} || crombie plotdump test.root ${HOME}/public_html/plots/test
 
 clean:
 	rm $(target) $(flatclass).h feedpanda.h
