--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -4,6 +4,7 @@ exename = makehbbtree
 flatclass = hbbfile
 testfile = F6F880D2-ACBE-E611-B59D-0CC47A706D40.root
 corrections = data/corrections.d
+bcalheader = bcal/BCalStrings.h
 
 ifeq ($(origin CMSSW_BASE), undefined)
 	pandainc = ../..
@@ -37,15 +38,19 @@ $(thejq): /home/dabercro/bin/jq
 
 endif
 
-$(target): $(flatclass).h slimmer.cpp feedpanda.h checkrun.h \
-	${CROMBIEPATH}/PlotTools/interface/KinematicFunctions.h ${CROMBIEPATH}/SkimmingTools/interface/StoreParticles.h ${CROMBIEPATH}/SkimmingTools/interface/CmsswParse.h
-	g++ -I$(pandainc) -I${CROMBIEPATH} $(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -o $(target) slimmer.cpp
+$(target): $(flatclass).h slimmer.cpp feedpanda.h checkrun.h $(bcalheader) btagreaders.h \
+	${CROMBIEPATH}/PlotTools/interface/KinematicFunctions.h ${CROMBIEPATH}/SkimmingTools/interface/StoreParticles.h ${CROMBIEPATH}/SkimmingTools/interface/CmsswParse.h \
+	bcal/BTagCalibrationStandalone.h bcal/BTagCalibrationStandalone.cpp
+	g++ -I$(pandainc) -I${CROMBIEPATH} -Ibcal $(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -o $(target) slimmer.cpp bcal/BTagCalibrationStandalone.cpp
 
 checkrun.h: certs/* ${CROMBIEPATH}/scripts/goodruns.py
 	crombie goodruns certs/* checkrun
 
 feedpanda.h: $(flatclass).h slimmer.cpp ${CROMBIEPATH}/scripts/feedpanda.pl
 	crombie feedpanda $(pandainc)/PandaTree/defs/panda.def $(flatclass).h slimmer.cpp feedpanda.h
+
+$(bcalheader): data/*.csv ${CROMBIEPATH}/scripts/bcalstrings.pl
+	crombie bcalstrings csv=data/CSVv2_Moriond17_B_H.csv cmva=data/cMVAv2_Moriond17_B_H.csv deepcsv=data/DeepCSV_Moriond17_B_H.csv $(bcalheader)
 
 $(flatclass).h: $(flatclass).txt ${CROMBIEPATH}/scripts/maketree.py
 	crombie maketree $(flatclass).txt
@@ -65,4 +70,4 @@ test: $(tarball) $(target)
 	test -z ${CMSSW_BASE} || crombie plotdump test.root $(testdir)
 
 clean:
-	rm $(target) $(flatclass).h feedpanda.h checkrun.h
+	rm $(target) $(flatclass).h feedpanda.h checkrun.h $(bcalheader)
