Classifier making much nicer results with AdaBoost. VH EWK corrections. Other improvements to plots.

--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -73,7 +73,7 @@ test: $(tarball) $(target)
 	test ! -f test.root || rm test.root
 	DYLD_LIBRARY_PATH=$(pandalib) $(exename) $(testfile) test.root
 	test -z ${CMSSW_BASE} || test ! -d $(testdir) || rm -r $(testdir)
-	test -z ${CMSSW_BASE} || crombie plotdump test.root $(testdir) \
+	test -z ${CMSSW_BASE} || cut='|!cmva_hbb_gen|cmva_hbb_gen' crombie plotdump test.root $(testdir) \
 	'cmva_hbb_m_reg|cmva_hbb_m; cmva_hbb && cmva_hbb_m_reg < 200' \
 	'cmva_gen_withnu_dijet_m|cmva_hbb_m_reg|cmva_hbb_m; cmva_hbb && cmva_gen_withnu_dijet_m < 250' \
 	'1 - cmva_hbb_m/cmva_gen_dijet_m|1 - cmva_hbb_m_reg/cmva_gen_withnu_dijet_m; cmva_hbb && cmva_jet1_gen && cmva_jet2_gen'
