Add filter and update for current CrombieTools

--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -1,5 +1,5 @@
-LDFLAGS = `root-config --glibs`
-CFLAGS = `root-config --cflags`
+LDFLAGS = `root-config --glibs` `fastjet-config --libs`
+CFLAGS = `root-config --cflags` `fastjet-config --cxxflags`
 exename = makehbbtree
 flatclass = hbbfile
 testfile = F6F880D2-ACBE-E611-B59D-0CC47A706D40.root
@@ -46,7 +46,7 @@ $(data): data/*.csv data/*.xml $(corrections)
 endif
 
 $(target): $(flatclass).h slimmer.cpp feedpanda.h checkrun.h btagreaders.h \
-	${CROMBIEPATH}/PlotTools/interface/KinematicFunctions.h ${CROMBIEPATH}/SkimmingTools/interface/StoreParticles.h ${CROMBIEPATH}/SkimmingTools/interface/CmsswParse.h \
+	${CROMBIEPATH}/PlotTools/interface/KinematicFunctions.h ${CROMBIEPATH}/SkimmingTools/interface/ObjectStore.h ${CROMBIEPATH}/SkimmingTools/interface/CmsswParse.h \
 	bcal/BTagCalibrationStandalone.h bcal/BTagCalibrationStandalone.cpp
 	g++ -I$(pandainc) -I${CROMBIEPATH} -Ibcal $(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -lTMVA -o $(target) slimmer.cpp bcal/BTagCalibrationStandalone.cpp
 
