Everything is wrong

--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -90,7 +90,7 @@ install: $(tarball) $(install) $(effs)
 
 testdir = ${HOME}/public_html/plots/testhbb
 
-test: $(target)
+test: $(target) $(effs)
 	test -d old || mkdir old
 	test -d new || mkdir new
 	# Move old test.root to a place for comparison
