Fixed slimmer, added trigger, cleaned some of the 2016 skimmer.

--- a/skimold/condor/tmpl.cfg
+++ b/skimold/condor/tmpl.cfg
@@ -1,7 +1,8 @@
 Requirements = Arch == "X86_64" && \
                TARGET.OpSys == "LINUX" && \
                TARGET.HasFileTransfer && \
-               Machine != "T3BTCH084.MIT.EDU"
+               Machine != "T3BTCH084.MIT.EDU" && \
+               Machine != "T3BTCH094.MIT.EDU"
 
 # basic general
 Request_Memory          = 1.2 GB
