--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -7,7 +7,7 @@ testfile = F6F880D2-ACBE-E611-B59D-0CC47A706D40.root
 corrections = data/corrections.d
 effs = data/btag_effs.root
 data = data/data.d
-rootdata = data/puppiCorr.root data/btag_effs.root 
+rootdata = data/puppiCorr.root data/btag_effs.root data/puid.root 
 
 ifeq ($(origin CMSSW_BASE), undefined)
 	pandainc = ../..
